crates/xcfun-capi/include/xcfun.h

/*
 * Auto-generated by cbindgen 0.29.2 from crates/xcfun-capi/src/.
 * Phase 5 — drop-in replacement for xcfun-master/api/xcfun.h.
 * DO NOT EDIT by hand. Regenerate via:
 *   cargo run -p xtask --bin regen-capi-header
 * Drift check (CI gate):
 *   cargo run -p xtask --bin regen-capi-header -- --check
 */

#ifndef XCFUN_CAPI_H
#define XCFUN_CAPI_H

#include <stdarg.h>
#include <stdbool.h>
#include <stdint.h>
#include <stdlib.h>
#include <stdbool.h>
#include <stddef.h>
#define XCFUN_API_VERSION 2

#ifndef XCFun_API
# if defined(_WIN32) || defined(__CYGWIN__)
#   ifdef XCFUN_BUILD_SHARED
#     define XCFun_API __declspec(dllexport)
#   else
#     define XCFun_API __declspec(dllimport)
#   endif
# else
#   define XCFun_API __attribute__((visibility("default")))
# endif
#endif

#ifndef XCFUN_MAX_ORDER
#define XCFUN_MAX_ORDER 6
#endif

typedef enum {
  XC_MODE_UNSET = 0,
  XC_PARTIAL_DERIVATIVES,
  XC_POTENTIAL,
  XC_CONTRACTED,
  XC_NR_MODES
} xcfun_mode;

typedef enum {
  XC_VARS_UNSET = -1,
  XC_A,
  XC_N,
  XC_A_B,
  XC_N_S,
  XC_A_GAA,
  XC_N_GNN,
  XC_A_B_GAA_GAB_GBB,
  XC_N_S_GNN_GNS_GSS,
  XC_A_GAA_LAPA,
  XC_A_GAA_TAUA,
  XC_N_GNN_LAPN,
  XC_N_GNN_TAUN,
  XC_A_B_GAA_GAB_GBB_LAPA_LAPB,
  XC_A_B_GAA_GAB_GBB_TAUA_TAUB,
  XC_N_S_GNN_GNS_GSS_LAPN_LAPS,
  XC_N_S_GNN_GNS_GSS_TAUN_TAUS,
  XC_A_B_GAA_GAB_GBB_LAPA_LAPB_TAUA_TAUB,
  XC_A_B_GAA_GAB_GBB_LAPA_LAPB_TAUA_TAUB_JPAA_JPBB,
  XC_N_S_GNN_GNS_GSS_LAPN_LAPS_TAUN_TAUS,
  XC_A_AX_AY_AZ,
  XC_A_B_AX_AY_AZ_BX_BY_BZ,
  XC_N_NX_NY_NZ,
  XC_N_S_NX_NY_NZ_SX_SY_SZ,
  XC_A_AX_AY_AZ_TAUA,
  XC_A_B_AX_AY_AZ_BX_BY_BZ_TAUA_TAUB,
  XC_N_NX_NY_NZ_TAUN,
  XC_N_S_NX_NY_NZ_SX_SY_SZ_TAUN_TAUS,
  XC_A_2ND_TAYLOR,
  XC_A_B_2ND_TAYLOR,
  XC_N_2ND_TAYLOR,
  XC_N_S_2ND_TAYLOR,
  XC_NR_VARS
} xcfun_vars;

struct xcfun_s;
typedef struct xcfun_s xcfun_t;


#ifdef __cplusplus
extern "C" {
#endif // __cplusplus

XCFun_API const char *xcfun_version(void);

XCFun_API const char *xcfun_splash(void);

XCFun_API const char *xcfun_authors(void);

XCFun_API int xcfun_test(void);

XCFun_API bool xcfun_is_compatible_library(void);

XCFun_API
int xcfun_which_vars(unsigned int func_type,
                     unsigned int dens_type,
                     unsigned int laplacian,
                     unsigned int kinetic,
                     unsigned int current,
                     unsigned int explicit_derivatives);

XCFun_API int xcfun_which_mode(unsigned int mode_type);

XCFun_API const char *xcfun_enumerate_parameters(int param);

XCFun_API const char *xcfun_enumerate_aliases(int n);

XCFun_API const char *xcfun_describe_short(const char *name);

XCFun_API const char *xcfun_describe_long(const char *name);

XCFun_API xcfun_t *xcfun_new(void);

XCFun_API void xcfun_delete(xcfun_t *fun);

XCFun_API int xcfun_set(xcfun_t *fun, const char *name, double value);

XCFun_API int xcfun_get(const xcfun_t *fun, const char *name, double *value);

XCFun_API bool xcfun_is_gga(const xcfun_t *fun);

XCFun_API bool xcfun_is_metagga(const xcfun_t *fun);

XCFun_API int xcfun_eval_setup(xcfun_t *fun, int vars, int mode, int order);

XCFun_API
int xcfun_user_eval_setup(xcfun_t *fun,
                          int order,
                          unsigned int func_type,
                          unsigned int dens_type,
                          unsigned int mode_type,
                          unsigned int laplacian,
                          unsigned int kinetic,
                          unsigned int current,
                          unsigned int explicit_derivatives);

XCFun_API int xcfun_input_length(const xcfun_t *fun);

XCFun_API int xcfun_output_length(const xcfun_t *fun);

XCFun_API void xcfun_eval(const xcfun_t *fun, const double *density, double *result);

XCFun_API
void xcfun_eval_vec(const xcfun_t *fun,
                    int nr_points,
                    const double *density,
                    int density_pitch,
                    double *result,
                    int result_pitch);

#ifdef __cplusplus
}  // extern "C"
#endif  // __cplusplus

#endif  /* XCFUN_CAPI_H */